# ros2_anti_cicada

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md
src/base_driver/: CMakeLists.txt  _CMakeLists.txt  package.xml
src/base_driver/config/: params.yaml
src/base_driver/include/base_driver/: base_driver_node.hpp  joy_commander_node.hpp  visibility_control.h
src/base_driver/launch/: base_driver.launch.py
src/base_driver/src/: base_driver_node.cpp  execute.cpp  joy_commander_node.cpp
src/oak_detection/: CMakeLists.txt  package.xml
src/oak_detection/include/oak_detection/: oak_detection_node.hpp  visibility_control.h
src/oak_detection/src/: oak_detection_node.cpp
src/oak_detection/test/: execute.cpp
