<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_driver</name>
  <version>0.0.0</version>
  <description>anti-cicada base</description>
  <maintainer email="ksuke.ropt@gmail.com">Eisuke Kato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>socketcan_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>socketcan_interface_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
